--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		"This is web page
+		<h1>"This is web page"
 	</head>
 	<body class="sapUiBody" id="content">
 	</body>
